examples/test/testpolicy17622.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17622
  namespace: namespace43
spec:
  podSelector:
    matchLabels:
      key12: value9
      key49: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value2
          key3: value26
          key32: value33
      podSelector:
        matchLabels:
          key38: value49
          key41: value8
